src/objects/Attribute__c.object
<CustomObject>
    <description>An Object that stores all the Attribute Types(Color,Flavor,Type) and its associated Attribute Values(Blue,Banana,Cocktails) along with its associated Atribute Value&apos;s Images(Fireworks Image for 4th of July)</description>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Attribute_External_Id__c</fullName>
        <description>FIeld that helps during dataload to prevent duplicates</description>
        <externalId>true</externalId>
        <label>Attribute External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <description>A Picklist Field that contains all the Attribute types that are being seen on a Recipe</description>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Barware Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Description/Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Classification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effort Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Pairings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good For Gatherings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition Fact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipe Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serving Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serving Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Average Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasting Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Taste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PublishedAsset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnitofAlcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Meta Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Page Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Page URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Hints</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_Value_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Image associated with an Attribute Value that looks up to media</description>
        <label>Attribute Value Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>AttributeValueImages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <description>A Field That stores the Value of respective Attribute Type(Blue,Green,Banana,English)</description>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box that helps in determining the Value of certain Attribute Types.</description>
        <label>Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Type__c</columns>
        <columns>Dynamic__c</columns>
        <columns>Attribute_Value__c</columns>
        <columns>API_External_ID__c</columns>
        <columns>Locale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATTR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>